Fix spacing issues

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1em 0 0.4em 0;
+  padding: 1em 3em 1.2em 3em;
   gap: 1em;
 }
 
